templates/kubernetes-service-template.yml
apiVersion: v1
kind: Service
metadata:
  name: @@name
  labels:
    @@selector
spec:
  ports:
  @@ports
  selector:
    @@selector
  type: LoadBalancer
